03-Gateway_Ingress/06-TLS-PASSTHROUGH/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
  namespace: default
spec:
  hosts:
    - "lb.net"
  gateways:
    - helloworld-gateway
  tls:
    - match:
        - port: 443
          sniHosts: ["lb.net"]
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 8443
